[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twikit"
dynamic = ["version"]
description = "Twitter API wrapper for python with no API key required."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "httpx[socks]",
    "filetype",
    "beautifulsoup4",
    "pyotp",
    "lxml",
    "webvtt-py",
    "m3u8",
    "noble-tls>=0.1.5",
    "Js2Py @ git+https://github.com/a-j-albert/Js2Py---supports-python-3.13.git"
]

[project.license]
text = "MIT"

[[project.authors]]
name = "Keaton Liu"
email = "lxtxiaotong@foxmail.com"

[project.urls]
Homepage = "https://github.com/keatonLiu/twikit#"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.dynamic]
version = { attr = "twikit.__version__" }

[tool.setuptools.package-data]
twikit = ["py.typed"]
